--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   },
   "homepage": "https://github.com/sgnilo/blockchain#readme",
   "dependencies": {
+    "blockchain-xjp": "^1.0.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "sha1": "^1.1.1"
   }
